changed resume and cPASS description

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                     <h2>Summary</h2>
                     <hr>
                     <p class="lead">
-                      I am a third-year Cognitive Science student at the University of California, San Diego looking for an internship for the 2018 school year and for Summer 2019.
+                      I am a third-year Cognitive Science student at the University of California, San Diego looking for an internship for Summer 2019.
                     </p>
                     <p>
-                      Download my resume <a href="./Resume.pdf">here</a>.
+                      Download my resume <a href="./Phillip's Resume SD.pdf">here</a>.
                     </p>
                     <p>
                       Access my tutorial on Naive Bayes <a href="./blogs/Naive Bayes/naive_bayes_index.html">here</a>.
@@ -201,9 +201,9 @@
                     <small>Jan. 2019 - Present</small>
                     </h2>
                     <p class="lead">
-                      Currently, I am using R to analyze data sets for a project that aims to determine the leading causes of political crises. 
-                      <br>
-                      Given that I just got this position, I do not have a lot to say about what I have done yet, but I am more than enthusiastic, ready, and willing to get more experience through this position and through meeting the great people on this team. 
+                      I work for the Machine Learning for Social Science Lab under cPASS, a lab specializing in using machine learning techniques to figure out the causes behind war and peace. 
+                      <br>                    
+                      Currently, I am using R to analyze data sets being used for MSSL's date parsing package, utilizing ggplot to help other visualize the patterns that I find in the data. I also document said data to facilitate communication with other co-workers about these findings.   
                     </p>
                 </div>
                 <div class="col-lg-3"></div>
