edited certificates, added new resume version

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <h2>Summary</h2>
                     <hr>
                     <p class="lead">
-                      I am a third-year Cognitive Science student at the University of California, San Diego looking for an internship for Summer 2019.
+                      I am a fourth-year Cognitive Science student at the University of California, San Diego looking for an internship for Summer 2020.
                     </p>
                     <p>
                       Download my resume <a href="./Phillip's Resume SD.pdf">here</a>.
@@ -150,10 +150,11 @@
                     <img class="img-responsive img-circle center-block grow" src="img/geisel.jpg" width="160px" alt=""></a>
                     <h2><span>University of California, San Diego</span><br>
                     <small>Class of 2020</small><br>
-                    <small>Cognitive Science - Machine Learning and Neural Computation</small><br>
+                    <small>Major: Cognitive Science - Machine Learning and Neural Computation</small><br>
+                    <small>Minor: Computer Science</small><br>
                     <small>Coursework: </small>
                     <p class="lead">
-                      Linear Algebra, Probability and Statistics, Data Structures and Object Oriented Design, Vector Calculus, Discrete Mathematics, Data Analysis and Modeling, Machine Learning
+                      Linear Algebra, Probability and Statistics, Data Structures and Object Oriented Design, Vector Calculus, Discrete Mathematics, Data Analysis and Modeling, Machine Learning, Data Science
                     </p>
                     </h2>
                    
@@ -203,7 +204,9 @@
                     <p class="lead">
                       I work for the Machine Learning for Social Science Lab under cPASS, a lab specializing in using machine learning techniques to figure out the causes behind war and peace. 
                       <br>                    
-                      Currently, I am using R to analyze data sets being used for MSSL's date parsing package, utilizing ggplot to help other visualize the patterns that I find in the data. I also document said data to facilitate communication with other co-workers about these findings.   
+                      Currently, I am using R to analyze data sets being used for MSSL's date parsing package, utilizing ggplot to help other visualize the patterns that I find in the data. I also document said data to facilitate communication with other co-workers about these findings.
+                      <br>
+                      I am also collaborating with other research assistants to develop a named entity recognition model to be used to parse various texts and information sources.   
                     </p>
                 </div>
                 <div class="col-lg-3"></div>
@@ -215,15 +218,15 @@
             <div class="row" id="company">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6 text-center">
-                    <a target="_blank" href="https://www.felicitycbt.com/">
+                    <a target="_blank">
                     <img class="img-responsive img-circle center-block grow" src="img/felicity.png" width="160px" alt=""></a>
                     <h2><span>Felicity CBT</span><br>
                     <small>La Jolla</small><br>
                     <small>Android Developer</small><br>
-                    <small>Sept. 2018 - Present</small>
+                    <small>Sept. 2018 - Sept. 2019</small>
                     </h2>
                     <p class="lead">
-                      Currently, I am assisting in the development of the company's Android application, implementing UI changes and managing the Firebase database. 
+                      I assisted in the development of the company's Android application, implementing UI changes and managing the Firebase database. 
                       <br>
                       More specifically, I implemented the app's "<em>reset password</em>" functionality through Firebase, and programmed dynamic UI changes via button presses.
                     </p>
@@ -243,9 +246,11 @@
                     <small>Dec. 2017 - Present</small>
                     </h2>
                     <p class="lead">
-                      Currently, I am conducting and designing online experiments in JavaScript, and am analyzing data sets using R and Python. 
+                      Currently, I am conducting and designing online experiments, and analyzing data sets using R and Python. For designing experiments, I use <a href="https://www.jspsych.org/">jsPsych</a>, a JavaScript package for developing online experiments.
                       <br>
                       In the past, I have created a R script to merge .csv files, and have developed an online experiment using the jsPsych library and have recorded and sent data using PHP.
+                      <br> 
+                      I have also developed an experiment that was later featured at an international linguistics conference.
                     </p>
                 </div>
                 <div class="col-lg-3"></div>
@@ -419,6 +424,8 @@
                 </div>
                 <div class="col-lg-3"></div>
             </div>
+
+
       </div>
     </section>
     <!-- Organizations ends -->
@@ -446,6 +453,56 @@
                 <div class="col-lg-3"></div>
             </div>
 
+            <div class="row" id="certificates">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 text-center">
+                    <a target="_blank" href="https://www.udemy.com/certificate/UC-Y11UN1SF/">
+                    <img class="img-responsive img-circle center-block grow" src="img/udemy.png" width="160px" alt=""></a>
+                    <h2><span>The Complete SQL Bootcamp Certificate of Completion</span><br>
+                    <small>Udemy</small><br>
+                    <small>Jose Portilla</small><br>
+                    <small>August 2019</small>
+                    </h2>
+                    <p class="lead">
+                      After completing Jose Portilla's course on PostgreSQL on Udemy, I recieved this certificate of completion. The Complete SQL Bootcamp taught me how to use PostgreSQL and pgAdmin to create, query, and alter databases.  
+                    </p>
+                </div>
+                <div class="col-lg-3"></div>
+            </div>
+
+            <div class="row" id="certificates">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 text-center">
+                    <a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/4YFRD55JG86P">
+                    <img class="img-responsive img-circle center-block grow" src="img/coursera.png" width="160px" alt=""></a>
+                    <h2><span>Introduction to Data Science in Python Certificate of Completion</span><br>
+                    <small>Coursera</small><br>
+                    <small>Christopher Brooks, University of Michigan</small><br>
+                    <small>July 2019</small>
+                    </h2>
+                    <p class="lead">
+                      This certificate shows that I have experience in fundamental Python programming techniques, data science libraries such as numpy and pandas, and basic data science practices such as data manipulation, cleaning, and analysis. 
+                    </p>
+                </div>
+                <div class="col-lg-3"></div>
+            </div>
+
+            <div class="row" id="certificates">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 text-center">
+                    <a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/ZRLH4VTLEWQF">
+                    <img class="img-responsive img-circle center-block grow" src="img/coursera.png" width="160px" alt=""></a>
+                    <h2><span>R Programming Certificate of Completion</span><br>
+                    <small>Coursera</small><br>
+                    <small>Roger D. Peng, Johns Hopkins University</small><br>
+                    <small>July 2019</small>
+                    </h2>
+                    <p class="lead">
+                      This course taught me how to code in R, and how to use it effectively for data analysis. This includes basic programming, reading in data, accessing R packages, writing R functions, and debugging R code. 
+                    </p>
+                </div>
+                <div class="col-lg-3"></div>
+            </div>
 
             <div class="row" id="certificates">
                 <div class="col-lg-3"></div>
@@ -524,8 +581,10 @@
                 <li>Python</li>
                 <li>Jupyter Notebook</li>
                 <li>R</li>
+                <li>PostgreSQL</li>
                 <li>MATLAB</li>
                 <li>HTML</li>
+                <li>C</li>
                 <li>CSS</li>
                 <li>Git</li>
                 <li>Vim</li>
