--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="text-vertical-center">
-            <img class="img-responsive img-circle center-block grow" src="img/profile-2.jpg" width="200px" alt="">
+            <img class="img-responsive img-circle center-block grow" src="img/DSC_0174.jpg" width="200px" alt="">
             <h1>Phillip Lagoc</h1>
             <h3>Machine Learning Enthusiast</h3>
             <br>
