modified MSSL desc

--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
                     <p class="lead">
                       I work for the Machine Learning for Social Science Lab under cPASS, a lab specializing in using machine learning techniques to figure out the causes behind war and peace. 
                       <br>                    
-                      Currently, I am using R to analyze data sets being used for MSSL's date parsing package, utilizing ggplot to help other visualize the patterns that I find in the data. I also document said data to facilitate communication with other co-workers about these findings.
+                      I have used R to analyze data sets being used for MSSL's date parsing package, utilizing ggplot to help other visualize the patterns that I find in the data. I have also documented this data to facilitate communication with other co-workers about these findings.
                       <br>
-                      I am also collaborating with other research assistants to develop a named entity recognition model to be used to parse various texts and information sources.   
+                      Currently, our team is learning about weak supervision, and I am helpin in applying weak supervision techniques in one of the lab's projects.   
                     </p>
                 </div>
                 <div class="col-lg-3"></div>
