added new personal project and new work experience

--- a/index.html
+++ b/index.html
@@ -212,6 +212,36 @@
                 <div class="col-lg-3"></div>
             </div>
 
+
+            <br>
+            <br>
+
+
+            <div class="row" id="company">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 text-center">
+                    <a target="_blank">
+                    <img class="img-responsive img-circle center-block grow" src="img/cogs108.png" width="160px" alt=""></a>
+                    <h2><span>UC San Diego Cognitive Science Department</span><br>
+                    <small>La Jolla</small><br>
+                    <small>COGS 108 Instructional Assistant</small><br>
+                    <small>Mar. 2019 - June 2019</small>
+                    </h2>
+                    <p class="lead">
+                      I was an Intructional Assistant for COGS 108, which was called <em>Data Science in Practice</em>. This upper-division class acted as the first step towards building a career in data science for students interested in the subject. 
+                      <br>
+                      As an Instructional Assistant, I led discussion sections aimed at teaching students about different data science and machine learning libraries in Python, including pandas, matplotlib, and scikit-learn. I also assisted in grading coding assignments as well as the final project at the end of the quarter that tested the student's ability to come up with a question and answer it using data.
+                      <br>
+                      After the quarter, I received 12 evaluations from the students I helped during my sections, including one from the professor herself. Overall, they appreciated my communication skills, preparedness for discussions, and willingess to answer questions and help in any way I could. Over 85% of the evaluations strongly recommended me as an Instructional Assistant to other students. 
+                      <br>
+                      This was a great experience for me, as it not only sharpened my data science skills, but allowed me to help my peers in getting started in their data science journey. 
+                    </p>
+                </div>
+                <div class="col-lg-3"></div>
+            </div>
+
+
+
             <br>
             <br>
 
@@ -344,6 +374,18 @@
                     <p class="lead">
                         This is my submission for Kaggle's Titanic Machine Learning challenge. With my latest submission, I have received a score of 0.77511. 
                         Here is my code on <a href="https://github.com/philliplagoc/Kaggle-Titanic">github</a>.
+                    </p>
+                </div>
+
+                <div class="col-lg-4 text-center">
+                    <a target="_blank">
+                    <img class="img-responsive img-circle center-block grow" src="img/personal_website.png" width="150px" alt=""></a>
+                    <h2><span>Personal Website</span><br>
+                    <small>Oct. 2018 - Oct. 2018</small><br>
+                    </h2>
+                    <p class="lead">
+                        Having seen other students' personal websites and having always wanted to create my own, I set out to try and accomplish this task through individual learning.
+                        Through this project, I learned about the fundamentals of web design, how to use JavaScript, HTML, and CSS to stylize and add functionality to my website, and how to launch it through GitHub.
                     </p>
                 </div>
 
