--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                       I am a fourth-year Cognitive Science student at the University of California, San Diego looking for an internship for Summer 2020.
                     </p>
                     <p>
-                      Download my resume <a href="./Phillip's Resume SD.pdf">here</a>.
+                      Download my resume <a href="./PhillipLagocResume.pdf">here</a>.
                     </p>
                     <p>
                       Access my tutorial on Naive Bayes <a href="./blogs/Naive Bayes/naive_bayes_index.html">here</a>.
