reworded mssl exp

--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
         <div class="text-vertical-center">
             <img class="img-responsive img-circle center-block grow" src="img/DSC_0174.jpg" width="200px" alt="">
             <h1>Phillip Lagoc</h1>
-            <h3>Machine Learning Enthusiast</h3>
+            <h3>UC San Diego Undergraduate Student</h3>
             <br>
             <a target="_blank" href="https://www.linkedin.com/in/philliplagoc/"><span class="fa fa-linkedin-square fa-4x" title="My LinkedIn"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <!-- <a target="_blank" href="./Resume.pdf" download="Phillip-Lagoc-Resume"><span class="fa fa-file fa-4x" aria-hidden="true" title="Download Resume"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             <a target="_blank" href="https://github.com/philliplagoc"><span class="fa fa-github fa-4x" aria-hidden="true" title="My Github"></span></a>
             <br>
             <br>
@@ -99,13 +98,10 @@
                     <h2>Summary</h2>
                     <hr>
                     <p class="lead">
-                      I am a fourth-year Cognitive Science student at the University of California, San Diego looking for an internship for Summer 2020.
+                      Fourth-year undergraduate researcher with experience in data analysis, modeling, Android development, and machine learning techniques seeking to use my problem-solving and critical thinking skills in job positions including but not limited to data science, machine learning and AI.
                     </p>
                     <p>
-                      Download my resume <a href="./PhillipLagocResume.pdf">here</a>.
-                    </p>
-                    <p>
-                      Access my tutorial on Naive Bayes <a href="./blogs/Naive Bayes/naive_bayes_index.html">here</a>.
+                      View my resume <a href="./PhillipLagocResume.pdf">here</a>.
                     </p>
                    <!--  <p>
                         I have also decided to keep my notes on the various ML stuff I come across <a href="./tiddlywikilocations/index.html">here</a>.
@@ -152,9 +148,10 @@
                     <small>Class of 2020</small><br>
                     <small>Major: Cognitive Science - Machine Learning and Neural Computation</small><br>
                     <small>Minor: Computer Science</small><br>
+                    <small>GPA: 3.60</small><br>
                     <small>Coursework: </small>
                     <p class="lead">
-                      Linear Algebra, Probability and Statistics, Data Structures and Object Oriented Design, Vector Calculus, Discrete Mathematics, Data Analysis and Modeling, Machine Learning, Data Science
+                      Data Science in Practice, Modeling and Data Analysis, Software Tools and Techniques Lab, Neural Networks and Deep Learning, Advanced Data Structures, Computer Organization and Systems Programming, Machine Learning, Mathematics for Algorithms and Systems
                     </p>
                     </h2>
                    
@@ -204,7 +201,7 @@
                     <p class="lead">
                       I work for the Machine Learning for Social Science Lab under cPASS, a lab specializing in using machine learning techniques to figure out the causes behind war and peace. 
                       <br>                    
-                      I have used R to analyze data sets being used for MSSL's date parsing package, utilizing ggplot to help other visualize the patterns that I find in the data. I have also documented this data to facilitate communication with other co-workers about these findings.
+                      I have used R's ggplot package to analyze and visualize data sets being used for MSSL's date parsing package. I have also documented this data to facilitate communication with other co-workers about these findings.
                       <br>
                       Currently, our team is learning about weak supervision, and I am helpin in applying weak supervision techniques in one of the lab's projects.   
                     </p>
