fixed spelling mistakes in website index

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     <small>Sept. 2018 - Dec. 2018</small><br>
                     </h2>
                     <p class="lead">
-                        In my first ever Kaggle Data Science and Machine Learning competition, I began my practice of techniques such as missing value imputation, data visualization, exploratory data analysis, and ensemble methods using classification models such as decision trees and logistic regresison models. Afterwards, I ranked in the top 64% of almost 16,000 leaderboard entries. Here is my code on <a href="https://github.com/philliplagoc/Kaggle-Titanic">github</a>.
+                        In my first ever Kaggle Data Science and Machine Learning competition, I began my practice of techniques such as missing value imputation, data visualization, exploratory data analysis, and ensemble methods using classification models such as decision trees and logistic regression models. Afterward, I ranked in the top 64% of almost 16,000 leaderboard entries. Here is my code on <a href="https://github.com/philliplagoc/Kaggle-Titanic">github</a>.
                     </p>
                 </div>
 
