edited website and finalized pdf

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <h2>Summary</h2>
                     <hr>
                     <p class="lead">
-                      Fourth-year undergraduate researcher with experience in data analysis, modeling, Android development, and machine learning techniques seeking to use my problem-solving and critical thinking skills in job positions including but not limited to data science, machine learning and AI.
+                      Fourth-year undergraduate researcher with experience in data analysis, modeling, Android development, test-driven development, and machine learning techniques seeking to use my problem-solving and critical thinking skills in job positions including but not limited to data science, machine learning and AI.
                     </p>
                     <p>
                       View my resume <a href="./PhillipLagocResume.pdf">here</a>.
@@ -398,7 +398,7 @@
                     <small>Nov. 2019 - Dec. 2019</small><br>
                     </h2>
                     <p class="lead">
-                        As part of a school assignment, I implemented Kruskal's algorithm on a self-implemented Up-Tree in C++ on a self-implemented graph of over 400,000 actors and 290,000 movies to find the minimum spanning tree of actors using the most recent movies. I also implemented Dijkstra's algorithm to get the shortest weighted path between two actors in this graph, using movies as edges and a movie's release year as its weight.
+                        As part of a school assignment, I implemented Kruskal's algorithm on a self-implemented Up-Tree in C++ on a self-implemented graph of over 400,000 actors and 290,000 movies to find the minimum spanning tree of actors using the most recent movies. I also implemented Dijkstra's algorithm to get the shortest weighted path between two actors in this graph, using movies as edges and a movie's release year as its weight. I also used the GoogleTest framework for unit-testing.
                     </p>
                 </div>
 
@@ -413,6 +413,8 @@
                         In my first ever Kaggle Data Science and Machine Learning competition, I began my practice of techniques such as missing value imputation, data visualization, exploratory data analysis, and ensemble methods using classification models such as decision trees and logistic regression models. Afterward, I ranked in the top 64% of almost 16,000 leaderboard entries. Here is my code on <a href="https://github.com/philliplagoc/Kaggle-Titanic">github</a>.
                     </p>
                 </div>
+
+
 
               <div class="col-lg-2 text-center">
               </div>
@@ -628,6 +630,8 @@
                 <li>C</li>
                 <li>CSS</li>
                 <li>Git</li>
+                <li>JUnit</li>
+                <li>GoogleTest</li>
                 <li>Vim</li>
               </ul>
               
