changed metadata in resume, added digit recognizer project

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="text-vertical-center">
-            <img class="img-responsive img-circle center-block grow" src="img/DSC_0174.jpg" width="200px" alt="">
+            <img class="img-responsive img-circle center-block grow" src="img/plagoc_profile_img.jpg" width="200px" alt="">
             <h1>Phillip Lagoc</h1>
             <h3>UC San Diego Undergraduate Student</h3>
             <br>
@@ -366,6 +366,18 @@
 
             <div class="row">
                 <div class="col-lg-2 text-center">
+                </div>
+
+                <div class="col-lg-4 text-center">
+                    <a target="_blank">
+                    <img class="img-responsive img-circle center-block grow" src="img/housing.png" width="150px" alt=""></a>
+                    <h2><span>Kaggle - Digit Recognizer Competition </span><br>
+                    <small>Jan. 2020</small><br>
+                    </h2>
+                    <p class="lead">
+                        This is my submission for Kaggle's Digit Recognizer challenge. Using PyTorch to make implement a LeNet model and using torchvisions to apply data augmentation, I was able to rank in the top 49% of over 2,000 entries. I achieved a model accuracy of 98.785%, which ranked me in the top 10% of all submitted models in terms of accuracy. 
+                        Here is my code on <a href="https://github.com/philliplagoc/Kaggle-Digit-Recognizer-Contest">github</a>.
+                    </p>
                 </div>
 
                 <div class="col-lg-4 text-center">
