changed resume and updated index to point to my new website

--- a/index.html
+++ b/index.html
@@ -98,11 +98,9 @@
                     <h2>Summary</h2>
                     <hr>
                     <p class="lead">
-                      Fourth-year undergraduate researcher with experience in data analysis, modeling, Android development, test-driven development, and machine learning techniques seeking to use my problem-solving and critical thinking skills in job positions including but not limited to data science, machine learning and AI.
+                      Hello! Please go to my new website <a href="https://philliplagoc.wordpress.com/">here</a>!
                     </p>
-                    <p>
-                      View my resume <a href="./PhillipLagocResume.pdf">here</a>.
-                    </p>
+                    
                    <!--  <p>
                         I have also decided to keep my notes on the various ML stuff I come across <a href="./tiddlywikilocations/index.html">here</a>.
                         This online notebook serves as a repository of all things ML, Data Science, and Statistics. 
