editing About Me

--- a/index.html
+++ b/index.html
@@ -197,11 +197,15 @@
 
         <section class="about-text">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce consequat iaculis enim, tempor finibus erat lobortis eu. Suspendisse ultricies ex a massa venenatis volutpat. Aliquam erat volutpat. Vivamus posuere turpis a aliquet viverra. Donec in sodales augue. Nulla facilisi. Suspendisse tincidunt ultricies nisl eu ullamcorper. Pellentesque fringilla metus nec enim commodo, at molestie est tincidunt. Sed consectetur facilisis augue, ac semper purus fringilla accumsan. Sed ac vestibulum diam. Proin id lacus arcu. In vitae mi laoreet, porta nunc quis, ornare velit.
+            My name is Phillip, and I currently work as a Games Product Analyst at Sensor Tower. I have experience analyzing data in Python, building Ruby scripts, querying MongoDB and Clickhouse databases, and working with LLMs.
           </p>
 
           <p>
-            Donec facilisis elit ut diam cursus, vitae molestie leo aliquam. Curabitur tincidunt lectus odio, at cursus ipsum egestas quis. Praesent malesuada venenatis orci ut vehicula. Proin quis massa nec felis aliquam porttitor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras tincidunt id massa vel lobortis. Nulla ac tempor felis, et porta libero. Vestibulum gravida urna arcu, in euismod purus mattis sit amet. Cras feugiat molestie eros, non fermentum eros ultricies a. Proin placerat sem a ipsum finibus, vitae lobortis tellus ultrices. Praesent malesuada lorem at facilisis eleifend. Nunc viverra dapibus pharetra. In dapibus nisi sit amet justo posuere scelerisque. Maecenas et volutpat enim, in sodales urna.
+            I'm also completing a Master's in Computer Science at the Georgia Institute of Technology, where I plan to graduate at the end of 2026. I've taken courses in machine learning, artificial intelligence, robotics, and game development. 
+          </p>
+
+          <p>
+            In my free time, I like to develop and play video games. I also write blog posts to enhance my understanding of concepts and techniques, or whenever I feel bored.
           </p>
         </section>
 
