updated resume and about me

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <div class="contact-info">
               <p class="contact-title">Resume</p>
-              <a href="./assets/philliplagoc-resume.pdf" download-class="contact-link">
+              <a href="./assets/PhillipLagoc_Resume.pdf" download-class="contact-link">
                 <p class="contact-link">Download Resume</p>
               </a>
             </div>
@@ -208,15 +208,7 @@
 
         <section class="about-text">
           <p>
-            My name is Phillip, and I currently work as a Games Product Analyst at Sensor Tower. I have experience analyzing data in Python, building Ruby scripts, querying MongoDB and Clickhouse databases, and working with LLMs.
-          </p>
-
-          <p>
-            I'm also completing a Master's in Computer Science at the Georgia Institute of Technology, where I plan to graduate at the end of 2026. I've taken courses in machine learning, artificial intelligence, robotics, and game development. 
-          </p>
-
-          <p>
-            In my free time, I like to develop and play video games. I also write blog posts to enhance my understanding of concepts and techniques, or whenever I feel bored.
+            Machine Learning Engineer with 4+ years of experience building scalable ML and NLP systems for large-scale data enrichment and product development. Proven track record in delivering production-ready pipelines using Python, scikit-learn, and OpenAI’s GPT models. Career highlights include launching a stand-alone ML-powered taxonomy product and automating high-impact analytics workflows, generating $400K+ in revenue. Adept at cross-functional collaboration, technical documentation, and supporting non-technical stakeholders. Passionate about applying LLMs and data-driven strategies to solve real-world problems.
           </p>
         </section>
 
@@ -251,11 +243,11 @@
           <ol class="timeline-list">
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Product Analyst, Gaming</h4>
+              <h4 class="h4 timeline-item-title">ML and AI Analyst, Gaming</h4>
               <h4 class="h4 timeline-item-subtitle">Sensor Tower</h4>
               <span>Nov. 2020 — Present</span>
               <p class="timeline-text">
-                As a Product Analyst at Sensor Tower, I conducted research to identify emerging mobile gaming trends. I also collaborated with various departments, including data science, marketing, and engineering, to define relevant data and modeling needed, establish efficient communication with clients, and track development. I also implemented various custom scripts using Python, Ruby, and MongoDB to streamline manual workflows for non-technical colleagues and increase overall productivity.
+                At Sensor Tower, I conducted research to identify emerging mobile gaming trends. I also collaborated with various departments, including data science, marketing, and engineering, to define relevant data and ML modeling needed, establish efficient communication with clients, and track development. I also implemented various custom scripts using Python, Ruby, and MongoDB to streamline manual workflows for non-technical colleagues and increase overall productivity.
               </p>
             </li>
 
@@ -371,63 +363,6 @@
             </li>
 
           </ol>
-
-        </section>
-
-        <section class="skill">
-
-          <h3 class="h3 skills-title">My Skills</h3>
-
-          <ul class="skills-list content-card">
-
-            <li class="skills-item">
-                <h5 class="h5">Languages</h5>
-                <p>Python, C#</p>
-            </li>
-
-            <li class="skills-item">
-                <h5 class="h5">Frameworks</h5>
-            </li>
-
-            <li class="skills-item">
-                <h5 class="h5">Software</h5>
-            </li>
-
-            <li class="skills-item">
-                <h5 class="h5">Cloud</h5>
-            </li>
-
-          </ul>
-
-        </section>
-
-        <section class="skill">
-
-          <h3 class="h3 skills-title">My Certificates</h3>
-
-          <ul class="skills-list content-card">
-
-            <li class="skills-item">
-                <h5 class="h5">Udemy — The Complete SQL Bootcamp</h5>
-            </li>
-
-            <li class="skills-item">
-                <h5 class="h5">Udemy – Tableau 2020 A-Z: Hands-On Tableau Training For Data Science</h5>
-            </li>
-
-            <li class="skills-item">
-                <h5 class="h5">Coursera – Introduction to Data Science in Python</h5>
-            </li>
-
-            <li class="skills-item">
-                <h5 class="h5">Coursera – R Programming</h5>
-            </li>
-
-            <li class="skills-item">
-                <h5 class="h5">Coursera – Machine Learning</h5>
-            </li>
-
-          </ul>
 
         </section>
 
