--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Phillip Lagoc">Phillip Lagoc</h1>
 
-          <p class="title">Games Product Analyst</p>
+          <p class="title">Product @ Sensor Tower | ML and AI Analytics Engineer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
