--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Phillip Lagoc's Personal Website</title>
 
   <!--
     - favicon
@@ -48,7 +48,9 @@
         <div class="info-content">
           <h1 class="name" title="Phillip Lagoc">Phillip Lagoc</h1>
 
-          <p class="title">Product @ Sensor Tower | ML and AI Analytics Engineer</p>
+          <p class="title">Product @ Sensor Tower</p>
+          <p class="title">ML & AI Analytics Engineer</p>
+          <p class="title">Game Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
