--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
             <button class="navbar-link" data-nav-link>Projects</button>
           </li>
 
+          <li class="navbar-item">
+            <a class="navbar-link" href="https://philliplagoc.blogspot.com/">Blog</a>
+          </li>
+
           <!-- TODO Re-enable once resume is done 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
