--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
         <section class="about-text">
           <p>
-            Machine Learning Engineer with 4+ years of experience building scalable ML and NLP systems for large-scale data enrichment and product development. Proven track record in delivering production-ready pipelines using Python, scikit-learn, and OpenAI’s GPT models. Career highlights include launching a stand-alone ML-powered taxonomy product and automating high-impact analytics workflows, generating $400K+ in revenue. Adept at cross-functional collaboration, technical documentation, and supporting non-technical stakeholders. Passionate about applying LLMs and data-driven strategies to solve real-world problems.
+            Product Analyst with 4+ years of experience building scalable ML and NLP systems for large-scale data enrichment and product development in the field of mobile gaming. Proven track record in delivering production-ready pipelines using Python, scikit-learn, and OpenAI’s GPT models. Career highlights include launching a stand-alone ML-powered taxonomy product and automating high-impact analytics workflows, generating $400K+ in revenue. Adept at cross-functional collaboration, technical documentation, and supporting non-technical stakeholders. Passionate about applying LLMs and data-driven strategies to solve real-world problems.
           </p>
         </section>
 
